@@ -1,3 +1,7 @@
+2010-05-22  Torbjorn Granlund  <tege@gmplib.org>
+
+	* tune/tuneup.c (tune_mod_1): Revert to version of 2010-05-06.
+
 2010-05-17  Torbjorn Granlund  <tege@gmplib.org>
 
 	* configure.in (ia64): Get 32-bit sizeof test right.
